# MonkeyAgent

./: .env.bailian.example  .env.example  .gitignore  README.md  pyproject.toml
docs/: Agent.md  MONKEY_AGENT_ARCHITECTURE_AND_TESTS.md  REGRESSION_TEST_CASES.md
monkey_agent/: __init__.py  __main__.py  advice.py
monkey_agent/app/: __init__.py  container.py  monkey_agent.py
monkey_agent/core/: __init__.py  config.py  env_file.py  state.py  users.py
monkey_agent/domains/: __init__.py  execution.py
monkey_agent/domains/agent_skills/: __init__.py  installer.py  matcher.py  models.py  parser.py  repository.py  runtime.py  runtime_models.py  safety.py  selector.py
monkey_agent/domains/classifier/: __init__.py  models.py  service.py
monkey_agent/domains/evaluation/: __init__.py  llm_judge.py  local_checks.py  models.py  service.py
monkey_agent/domains/goals/: __init__.py  models.py  store.py
monkey_agent/domains/learning/: __init__.py  review_store.py  usage_memory.py
monkey_agent/domains/memory/: __init__.py  store.py
monkey_agent/domains/models/: __init__.py  bailian.py
monkey_agent/domains/routing/: __init__.py  policy.py
monkey_agent/domains/rules/: __init__.py  handlers.py  matcher.py  models.py  repository.py
monkey_agent/domains/runs/: __init__.py  diagnostics.py  models.py  store.py
monkey_agent/domains/skills/: __init__.py  matcher.py  models.py  repository.py
monkey_agent/workflows/: __init__.py
tests/: test_agent_skills.py  test_goal.py  test_product_regression.py  test_rules_first.py  test_runs.py  test_telegram.py
(+42 files in other folders)
